--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^34.2.0",
-    "@ckeditor/ckeditor5-vue": "^4.0.1",
     "axios": "^0.27.2",
-    "dompurify": "^2.3.8",
     "lodash": "^4.17.21",
-    "marked": "^4.0.17",
-    "pinia": "^2.0.14",
-    "uuid": "^8.3.2",
-    "vue": "^3.2.37",
-    "vue-router": "^4.0.16",
-    "vue3-popper": "^1.5.0"
+    "vue": "^3.2.37"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
