--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,9 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8080
+
+DOCKER_NAME="airqual"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +13,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=database
 DB_PORT=3306
-DB_DATABASE=funcev
-DB_USERNAME=funcev
-DB_PASSWORD=funcev
+DB_DATABASE=airqual
+DB_USERNAME=airqual
+DB_PASSWORD=airqual
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -28,7 +30,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
+MAIL_MAILER=log
 MAIL_HOST=mailhog
 MAIL_PORT=1025
 MAIL_USERNAME=null
@@ -50,3 +52,15 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+OAUTH_GITHUB_CLIENT_ID=
+OAUTH_GITHUB_CLIENT_SECRET=
+OUATH_GITHUB_REDIRECT='http://localhost:8080/auth/callback/github'
+
+
+OAUTH_GOOGLE_CLIENT_ID=
+OAUTH_GOOGLE_CLIENT_SECRET=
+OUATH_GOOGLE_REDIRECT='http://localhost:8080/auth/callback/google'
+
+AQICN_API_TOKEN=4dd9246a7e7beeecc7bdf1f0e8d07d77e3aa5d19
